--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,9 @@
 {
-    "development": {
+    "Test": {
         "PORT": 3000,
-        "MONGODB_URI": "mongodb://localhost:27017/project"
+        "MONGODB_URI": "mongodb://localhost:27017/project",
+        "JWT_SECRET": "Abhi",
+        "JWT_EXP":60
     }
 
 }
