--- a/package.json
+++ b/package.json
@@ -17,16 +17,22 @@
   },
   "homepage": "https://github.com/Abhiramnaidu1/Abhiram_cs518#readme",
   "dependencies": {
+    "async": "^3.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "buf": "^0.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18",
+    "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "router": "^1.3.5"
+    "router": "^1.3.5",
+    "uuid": "^8.3.2"
   }
 }
