--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.5.0",
     "q": "^1.5.1",
     "request": "^2.88.2",
-    "rootpath": "^0.1.2"
+    "rootpath": "^0.1.2",
+    "validator": "^13.5.2"
   }
 }
